--- a/src/app/layout-pages/pages/register-users/register-users.component.html
+++ b/src/app/layout-pages/pages/register-users/register-users.component.html
@@ -21,7 +21,7 @@
         <h2 class="text-lg font-semibold mb-2">Información de la cuenta</h2>
 
         <div class="mb-4">
-          <input type="email" maxlength="30" placeholder="Correo Electrónico" autocomplete="email" class="w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400" name="correoElectronico" [(ngModel)]="signUpDTORequest.correoElectronico" >
+          <input type="email" maxlength="30" placeholder="Correo Electrónico" autocomplete="email" class="w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400" name="correoElectronico" [(ngModel)]="signUpDTORequest.email" >
         </div>
 
         <div class="mb-4 relative">
@@ -37,7 +37,7 @@
         </div>
 
         <div class=" relative">
-          <input type="{{ showPasswordConfirmation ? 'text': 'password'}}" maxlength="30" placeholder="Confirmar Contraseña" autocomplete="new-password" class="w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400" name="contrasenia" [(ngModel)]="signUpDTORequest.contrasenia">
+          <input type="{{ showPasswordConfirmation ? 'text': 'password'}}" maxlength="30" placeholder="Confirmar Contraseña" autocomplete="new-password" class="w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400" name="contrasenia" [(ngModel)]="signUpDTORequest.password">
           <span class="absolute top-0 right-0 mr-3 mt-2 cursor-pointer" (click)="togglePasswordConfirmation()">
 
           @if (showPasswordConfirmation){
@@ -60,15 +60,15 @@
 
 
         <div class="mb-4">
-          <input type="text" maxlength="30" placeholder="Nombre" class="w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400" name="nombre" [(ngModel)]="signUpDTORequest.nombre">
+          <input type="text" maxlength="30" placeholder="Nombre" class="w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400" name="nombre" [(ngModel)]="signUpDTORequest.name">
         </div>
         <div class="mb-4">
-          <input type="text" maxlength="30" placeholder="Dirección" class="w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400" name="direccion" [(ngModel)]="signUpDTORequest.direccion">
+          <input type="text" maxlength="30" placeholder="Dirección" class="w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400" name="direccion" [(ngModel)]="signUpDTORequest.address">
         </div>
         <div class="lg:mb-0 mb-4">
           <input type="text" placeholder="Número de contacto"
                  class="w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400"
-                 name="telefono" [(ngModel)]="signUpDTORequest.telefono"
+                 name="telefono" [(ngModel)]="signUpDTORequest.phone"
                  (keypress)="onKeyPress($event)"
                  maxlength="9"
                  required>
