--- a/src/app/client-view/pages/order-list-client/order-list-client.component.html
+++ b/src/app/client-view/pages/order-list-client/order-list-client.component.html
@@ -53,15 +53,15 @@
       </thead>
 
       <tbody class="w-full">
-      <tr *ngFor="let vehicle of vehicles | paginate: { itemsPerPage: 6, currentPage: p }">
-        <td class="border-gray-400 py-4" style="width: 16.66%;">{{ vehicle.placa }}</td>
-        <td class="border-gray-400 py-4" style="width: 16.66%;">{{ vehicle.nombreTaller }}</td>
-        <td class="border-gray-400 py-4" style="width: 16.66%;">{{ vehicle.fechaRegistro }}</td>
-        <td class="border-gray-400 py-4" style="width: 16.66%;">{{ vehicle.horaRegistro }}</td>
-        <td class="border-gray-400 font-semibold py-4 {{ getColorClass(vehicle.estado) }}" style="width: 16.66%;">{{
-            vehicle.estado }}</td>
+      <tr *ngFor="let orderItemClient of orderListClient | paginate: { itemsPerPage: 6, currentPage: p }">
+        <td class="border-gray-400 py-4" style="width: 16.66%;">{{ orderItemClient.plate }}</td>
+        <td class="border-gray-400 py-4" style="width: 16.66%;">{{ orderItemClient.nameWorkshop }}</td>
+        <td class="border-gray-400 py-4" style="width: 16.66%;">{{ orderItemClient.orderDate }}</td>
+        <td class="border-gray-400 py-4" style="width: 16.66%;">{{ orderItemClient.hourDate }}</td>
+        <td class="border-gray-400 font-semibold py-4 {{ getColorClass(orderItemClient.status) }}" style="width: 16.66%;">{{
+            orderItemClient.status }}</td>
         <td class="border-gray-400 py-4" style="width: 14.28%;">
-          <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F" (click)="detailOrder(vehicle.id)">☰</button>
+          <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F" (click)="detailOrder(orderItemClient.id)">☰</button>
         </td>
       </tr>
       </tbody>
@@ -82,14 +82,14 @@
       </thead>
 
       <tbody class="w-full">
-      <tr *ngFor="let vehicle of vehicles | paginate: { itemsPerPage:7, currentPage: p }">
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.placa }}</td>
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.fechaRegistro }}</td>
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.horaRegistro }}</td>
-        <td class="text-xs border-gray-400 font-semibold py-4 {{ getColorClass(vehicle.estado) }}"
-            style="width: 20%;">{{ vehicle.estado }}</td>
+      <tr *ngFor="let orderItemClient of orderListClient | paginate: { itemsPerPage:7, currentPage: p }">
+        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ orderItemClient.plate }}</td>
+        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ orderItemClient.orderDate }}</td>
+        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ orderItemClient.hourDate }}</td>
+        <td class="text-xs border-gray-400 font-semibold py-4 {{ getColorClass(orderItemClient.status) }}"
+            style="width: 20%;">{{ orderItemClient.status }}</td>
         <td class="text-xs border-gray-400 py-4" style="width: 20%;">
-          <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F" (click)="detailOrder(vehicle.id)">☰</button>
+          <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F" (click)="detailOrder(orderItemClient.id)">☰</button>
         </td>
       </tr>
       </tbody>
