--- a/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
+++ b/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
@@ -16,7 +16,7 @@
               @for (servicio of accionesMantenimiento; track $index) {
                 <label class="flex items-center">
                   <input type="checkbox" class="mr-2" (change)="toggleService(servicio.id)">
-                  {{ servicio.nombre }}
+                  {{ servicio.name }}
                 </label>
               }
             </div>
@@ -29,7 +29,7 @@
               @for (servicio of accionesReparacion; track $index) {
                 <label class="flex items-center">
                   <input type="checkbox" class="mr-2" (change)="toggleService(servicio.id)">
-                  {{ servicio.nombre }}
+                  {{ servicio.name }}
                 </label>
               }
             </div>
