--- a/src/app/order-progress/pages/workshop-progress/workshop-progress.component.html
+++ b/src/app/order-progress/pages/workshop-progress/workshop-progress.component.html
@@ -14,10 +14,10 @@
 
     <div class="flex flex-col border border-gray-300 mt-5 p-8 mb-4 justify-center mr-7 ml-7 lg:w-1/2" style="background: #D9D9D9">
       <h2 class="font-bold text-2xl mb-2">Detalle de la Orden de Trabajo</h2>
-      <p class="font-bold text-xl mb-2">Información del taller</p>
-      <p class="text-lg mt-2">Nombre: {{ orders.nombreTaller }}</p>
-      <p class="text-lg mt-2">Dirección: {{ orders.direccionTaller }}</p>
-      <p class="text-lg mt-2">Teléfono/Celular: {{ orders.telefonoTaller }}</p>
+      <p class="font-bold text-xl mb-2">Información del cliente</p>
+      <p class="text-lg mt-2">Nombre: {{ orders.nameWorkshop }}</p>
+      <p class="text-lg mt-2">Dirección: {{ orders.addressWorkshop }}</p>
+      <p class="text-lg mt-2">Teléfono/Celular: {{ orders.phoneWorkShop }}</p>
     </div>
 
 
