--- a/src/app/mechanic-view/pages/create-order/create-order.component.html
+++ b/src/app/mechanic-view/pages/create-order/create-order.component.html
@@ -32,13 +32,13 @@
 
         <input type="text" placeholder="Nombre"
           class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
-          [(ngModel)]="cliente.nameCustomer">
+          [(ngModel)]="cliente.nameCustomer" readonly>
         <input type="text" placeholder="Direccion"
           class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
-          [(ngModel)]="cliente.addressCustomer">
+          [(ngModel)]="cliente.addressCustomer" readonly>
         <input type="text" placeholder="Número de contacto"
           class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mb-2 lg:mb-0"
-          [(ngModel)]="cliente.phoneCustomer">
+          [(ngModel)]="cliente.phoneCustomer" readonly>
       </div>
 
       <div class="flex">
@@ -49,16 +49,16 @@
       <div class="flex lg:flex-row flex-col">
         <input type="text" placeholder="Placa"
           class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
-          [(ngModel)]="vehiculo.plate">
+          [(ngModel)]="vehiculo.plate" readonly>
         <input type="text" placeholder="Modelo"
           class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
-          [(ngModel)]="vehiculo.brand">
+          [(ngModel)]="vehiculo.brand" readonly>
         <input type="text" placeholder="Marca"
           class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
-          [(ngModel)]="vehiculo.model">
+          [(ngModel)]="vehiculo.model" readonly>
         <input type="text" placeholder="Categoría"
           class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mb-2 lg:mb-0"
-          [(ngModel)]="vehiculo.category">
+          [(ngModel)]="vehiculo.category" readonly>
       </div>
 
       <div class="flex">
