--- a/src/app/order-progress/pages/multi-progress-bar/multi-progress-bar.component.html
+++ b/src/app/order-progress/pages/multi-progress-bar/multi-progress-bar.component.html
@@ -12,7 +12,7 @@
         <p class="text-lg "><strong>Mecánico: </strong>{{ order.mecanico.nombre }}</p>
         <div class="flex">
           <p class="text-lg"><strong>Estado:</strong>&nbsp;</p>
-          <p class="text-lg {{ getColorClass(order.estadoServicio) }}">{{ order.estadoServicio }}</p>
+          <p class="text-lg {{ getColorClass(order.estadoServicio) }}">{{ mapEstado(order.estadoServicio) }}</p>
         </div>
       </div>
     </div> -->
@@ -143,7 +143,7 @@
     </div> -->
 
     <!--- Barra de progreso --->
-<!-- 
+<!--
     @if(order.pasos.length >=8){ -->
 
       <!--- mayores que 8 van pegados a la derecha--->
