--- a/src/app/order-progress/pages/progress-bar/progress-bar.component.html
+++ b/src/app/order-progress/pages/progress-bar/progress-bar.component.html
@@ -1,9 +1,9 @@
 <div class="items-start lg:ml-0 ml-5">
   <p class="text-lg "><strong>Servicio: </strong>{{ datosOrden.operation.name }}</p>
-  <p class="text-lg "><strong>Mecánico: </strong>{{ datosOrden.mecanico.name }}</p>
+  <p class="text-lg "><strong>Mecánico: </strong>{{ datosOrden.mechanic.name }}</p>
   <div class="flex">
     <p class="text-lg"><strong>Estado:</strong>&nbsp;</p>
-    <p class="text-lg {{ getColorClass(datosOrden.estadoServicio) }}">{{ mapEstado(datosOrden.estadoServicio) }}</p>
+    <p class="text-lg {{ getColorClass(datosOrden.statusOperation) }}">{{ mapEstado(datosOrden.statusOperation) }}</p>
   </div>
 </div>
 
@@ -109,7 +109,7 @@
 <div class="main items-center">
   <div class="flex lg:flex-row flex-col mt-10">
 
-    @if (datosOrden.estadoServicio === 'En Proceso' || datosOrden.estadoServicio === 'EN_PROCESO' ){
+    @if (datosOrden.statusOperation === 'En Proceso' || datosOrden.statusOperation === 'EN_PROCESO' ){
       @if (currentServiceIndex < pasos.length - 1){
         <div class="boton flex justify-center mt-5">
           <button type="submit" class="text-black font-semibold inline-block" (click)="nextStep()">Siguiente Paso</button>
@@ -117,13 +117,13 @@
       }
     }
 
-    @if (datosOrden.estadoServicio === 'En Proceso' || datosOrden.estadoServicio === 'EN_PROCESO'){
+    @if (datosOrden.statusOperation === 'En Proceso' || datosOrden.statusOperation === 'EN_PROCESO'){
       <div class="botonfn flex justify-center mt-5">
         <button type="submit" class="text-black font-semibold inline-block" (click)="openModal()" >Finalizar Orden</button>
       </div>
     }
 
-    @if(datosOrden.estadoServicio === 'En Espera'  || datosOrden.estadoServicio === 'EN_ESPERA') {
+    @if(datosOrden.statusOperation === 'En Espera'  || datosOrden.statusOperation === 'EN_ESPERA') {
       <div class="boton flex justify-center mt-5">
         <button type="submit" class="text-black font-semibold inline-block" (click)="startOrder()">Empezar Orden</button>
       </div>
