--- a/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
+++ b/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
@@ -17,7 +17,7 @@
       <thead>
       <tr>
         <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">NOMBRE</th>
-        <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">PASSWORD</th>
+        <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">TELEFONÓ</th>
         <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">CORREO</th>
         <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">SERVICIOS</th>
         <th class="font-semibold border-b-2 border-gray-400 py-4" style="width: 20%;">ACCION</th>
@@ -27,7 +27,7 @@
 
       <tr *ngFor="let mechanic of mechanics  | paginate: { itemsPerPage: 6, currentPage: p }">
         <td class="font-semibold border-gray-400 py-4" style="width: 20%;">{{ mechanic.name }}</td>
-        <td class="font-semibold border-gray-400 py-4" style="width: 20%;">{{ mechanic.password }}</td>
+        <td class="font-semibold border-gray-400 py-4" style="width: 20%;">{{ mechanic.phone }}</td>
         <td class="border-gray-400 py-4" style="width: 20%;">{{ mechanic.email }}</td>
         <td class="border-gray-400 py-4" style="width: 20%;">
           <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F" (click)="toggleServicios2(mechanic)">mostrar</button>
