--- a/src/app/order-progress/pages/workshop-progress/workshop-progress.component.html
+++ b/src/app/order-progress/pages/workshop-progress/workshop-progress.component.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="flex flex-col w-full lg:w-1/2 lg:mr-48 lg:mt-0 mt-10">
-    <!-- <app-multi-progress-bar [mecanicoPaso]="mecanicoPaso" [orderServices]="orders"/> -->
+    <app-multi-progress-bar [mecanicoPaso]="mecanicoPaso" [orderServices]="orders"/>
 
   </div>
 
